--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Camera Fly-through using Theatre.js | Codrops</title>
-    <meta name="description" content="Demo for the tutorial on how to create a camera fly-through effect with Theatre.js" />
+    <meta name="description" content="ZENBAUHAUS" />
     <meta name="keywords" content="theatre.js, fly-through, 3d, react three fiber" />
-    <meta name="author" content="Andrew Prifer for Codrops" />
+    <meta name="author" content="Eliáš Bauer" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <script>
@@ -35,26 +35,19 @@
   <body class="demo-1">
     <main>
       <div class="frame">
-        <div class="frame__title">
-          <h1 class="frame__title-main">Camera Flythrough using Theatre.js</h1>
-          <a
-            aria-label="Back to the article"
-            class="frame__title-back"
-            href="https://tympanus.net/codrops/?p=70449"
-          >
-            <span class="oh__inner">Back to the article</span>
-            <svg width="18px" height="18px" viewBox="0 0 24 24">
-              <path
-                vector-effect="non-scaling-stroke"
-                d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"
-              ></path>
-            </svg>
-          </a>
-        </div>
-        <a class="frame__prev" href="https://tympanus.net/Development/TypeShuffleAnimation/">Previous demo</a>
+          <div class="frame__title-main">ZENBAUHAUS</div>
+          <ul class="link-menu">
+            <li><a href="#">_Reel</a></li>
+            <li><a href="#bitch">_Art </a></li>
+            <li><a href="#">Works </a></li>
+            <li><a href="http://instagram.com/tra5her_sk8">IG </a></li>
+            <li><a href="http://facebook.com/ezbawa">FB </a></li>
+            
+          </ul>
+        
       </div>
       <div id="root"></div>
     </main>
-    <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
