--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Camera Fly-through using Theatre.js | Codrops</title>
+    <title>ZENBAUHAUS</title>
     <meta name="description" content="ZENBAUHAUS" />
     <meta name="keywords" content="theatre.js, fly-through, 3d, react three fiber" />
     <meta name="author" content="Eliáš Bauer" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.svg" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <script>
       document.documentElement.className = "js";
@@ -37,9 +37,9 @@
       <div class="frame">
           <div class="frame__title-main">ZENBAUHAUS</div>
           <ul class="link-menu">
-            <li><a href="#">_Reel</a></li>
-            <li><a href="#bitch">_Art </a></li>
-            <li><a href="#">Works </a></li>
+            <li><a href="hereismyreel">Reel</a></li>
+            <li><a href="myartportfolio">Art </a></li>
+            <li><a href="notnio">Works </a></li>
             <li><a href="http://instagram.com/tra5her_sk8">IG </a></li>
             <li><a href="http://facebook.com/ezbawa">FB </a></li>
             
