--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
       <div class="frame" id="frame">
           <div class="frame__title-main">ZENBAUHAUS</div>
           <ul class="link-menu">
-            <li><a href="https://zenbau.haus/reel.mp4">Reel</a></li>
-            <li><a href="https://zenbau.haus/Elias_Bauer_portfolio.pdf">Art </a></li>
-            <li><a href="https://illustrious-alyssum-b88.notion.site/Portfolio-selected-works-2016-23-349c9b01dd2d4416847b747a14b908c6">Works </a></li>
-            <li><a href="http://instagram.com/tra5her_sk8">IG </a></li>
-            <li><a href="http://facebook.com/ezbawa">FB </a></li>
+            <li><a href="https://zenbau.haus/cv.pdf">about</a></li>
+            <li><a href="https://zenbau.haus/reel.mp4">reel</a></li>
+            <li><a href="https://illustrious-alyssum-b88.notion.site/Portfolio-selected-works-2016-23-349c9b01dd2d4416847b747a14b908c6">work </a></li>
+            <li><a href="https://zenbau.haus/portfolio.pdf">art </a></li>
+            <li><a href="http://instagram.com/tra5her_sk8">ig </a></li>
+            <li><a href="http://facebook.com/ezbawa">fb</a></li>
             
           </ul>
         
