--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <body class="demo-1">
     <main>
       <div class="frame" id="frame">
-          <div class="frame__title-main">ZENBAUHAUS</div>
+          <div class="frame__title-main">Ë ZENBAUHAUS</div>
           <ul class="link-menu">
             <li><a href="https://zenbau.haus/cv.pdf">about</a></li>
-            <li><a href="https://zenbau.haus/reel.mp4">reel</a></li>
+            <li><a href="https://drive.google.com/file/d/19ugYFHZf502Pc_nG0XCthXDsbeOTfHZ1/view?usp=sharing">reel</a></li>
             <li><a href="https://illustrious-alyssum-b88.notion.site/Portfolio-selected-works-2016-23-349c9b01dd2d4416847b747a14b908c6">work </a></li>
             <li><a href="https://zenbau.haus/portfolio.pdf">art </a></li>
             <li><a href="http://instagram.com/tra5her_sk8">ig </a></li>
@@ -55,7 +55,6 @@
     window.onscroll = function() {
       console.log('Current scroll from the top: ' + window.scrollY);
     };
-
     window.onload = function() {
       const frame = document.getElementById('frame');
       let hovering = false;
